fixed some minor layout issues

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -29,7 +29,10 @@ html {
     }
    
     main {
+      text-align: left;
       margin-top: 150px;
+      width: 90%;
+      padding: 20px 100px;
     }
     
     footer {
